// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EXACT (false): SHOW active class 1`] = `
<a
  aria-current="true"
  className="active"
  href="/second"
  onClick={[Function]}
  onMouseDown={undefined}
  onTouchStart={undefined}
  style={Object {}}
  target={undefined}
/>
`;

exports[`EXACT (true): DONT show active class 1`] = `
<a
  aria-current={false}
  className=""
  href="/second"
  onClick={[Function]}
  onMouseDown={undefined}
  onTouchStart={undefined}
  style={undefined}
  target={undefined}
/>
`;

exports[`STRICT: DONT show active class 1`] = `
<a
  aria-current={false}
  className=""
  href="/first/"
  onClick={[Function]}
  onMouseDown={undefined}
  onTouchStart={undefined}
  style={undefined}
  target={undefined}
/>
`;

exports[`combine with existing styles and class 1`] = `
<a
  aria-current="true"
  className="foo active"
  href="/first"
  onClick={[Function]}
  onMouseDown={undefined}
  onTouchStart={undefined}
  style={
    Object {
      "color": "red",
      "fontSize": 32,
    }
  }
  target={undefined}
/>
`;

exports[`isActive return false 1`] = `
Object {
  "hash": "",
  "matchedPath": "/first",
  "matchers": Object {
    "hash": undefined,
    "path": "/first",
    "query": undefined,
  },
  "params": Object {},
  "partial": false,
  "query": Object {},
  "state": undefined,
  "type": "FIRST",
}
`;

exports[`isActive return false 2`] = `
Object {
  "basename": "",
  "entries": Array [
    Object {
      "basename": "",
      "hash": "",
      "key": "345678",
      "pathname": "/first",
      "search": "",
      "state": Object {},
      "url": "/first",
    },
  ],
  "hasSSR": false,
  "hash": "",
  "index": 0,
  "kind": "load",
  "length": 1,
  "params": Object {},
  "pathname": "/first",
  "prev": Object {
    "basename": "",
    "entries": Array [],
    "hasSSR": false,
    "hash": "",
    "index": -1,
    "kind": "",
    "length": 0,
    "params": Object {},
    "pathname": "",
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "type": "",
    "url": "",
  },
  "query": Object {},
  "scene": "",
  "search": "",
  "state": Object {},
  "status": 200,
  "type": "FIRST",
  "url": "/first",
}
`;

exports[`isActive return false 3`] = `
<a
  aria-current={false}
  className=""
  href="/first"
  onClick={[Function]}
  onMouseDown={undefined}
  onTouchStart={undefined}
  style={undefined}
  target={undefined}
/>
`;

exports[`isActive return false 4`] = `null`;

exports[`isActive return false 5`] = `
Object {
  "basename": "",
  "entries": Array [
    Object {
      "basename": "",
      "hash": "",
      "key": "345678",
      "pathname": "/first",
      "search": "",
      "state": Object {},
      "url": "/first",
    },
    Object {
      "basename": "",
      "hash": "",
      "key": "345678",
      "pathname": "/second/foo",
      "search": "",
      "state": Object {},
      "url": "/second/foo",
    },
  ],
  "hasSSR": false,
  "hash": "",
  "index": 1,
  "kind": "push",
  "length": 2,
  "params": Object {
    "param": "foo",
  },
  "pathname": "/second/foo",
  "prev": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
    ],
    "hasSSR": false,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/first",
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "url": "/first",
  },
  "query": Object {},
  "scene": "",
  "search": "",
  "state": Object {},
  "status": 200,
  "type": "SECOND",
  "url": "/second/foo",
}
`;

exports[`isActive return false 6`] = `
<a
  aria-current="true"
  className="active"
  href="/first"
  onClick={[Function]}
  onMouseDown={undefined}
  onTouchStart={undefined}
  style={Object {}}
  target={undefined}
/>
`;

exports[`isActive returns true 1`] = `
Object {
  "hash": "",
  "matchedPath": "/first",
  "matchers": Object {
    "hash": undefined,
    "path": "/first",
    "query": undefined,
  },
  "params": Object {},
  "partial": false,
  "query": Object {},
  "state": undefined,
  "type": "FIRST",
}
`;

exports[`isActive returns true 2`] = `
Object {
  "basename": "",
  "entries": Array [
    Object {
      "basename": "",
      "hash": "",
      "key": "345678",
      "pathname": "/first",
      "search": "",
      "state": Object {},
      "url": "/first",
    },
  ],
  "hasSSR": false,
  "hash": "",
  "index": 0,
  "kind": "load",
  "length": 1,
  "params": Object {},
  "pathname": "/first",
  "prev": Object {
    "basename": "",
    "entries": Array [],
    "hasSSR": false,
    "hash": "",
    "index": -1,
    "kind": "",
    "length": 0,
    "params": Object {},
    "pathname": "",
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "type": "",
    "url": "",
  },
  "query": Object {},
  "scene": "",
  "search": "",
  "state": Object {},
  "status": 200,
  "type": "FIRST",
  "url": "/first",
}
`;

exports[`isActive returns true 3`] = `
<a
  aria-current="true"
  className="active"
  href="/first"
  onClick={[Function]}
  onMouseDown={undefined}
  onTouchStart={undefined}
  style={Object {}}
  target={undefined}
/>
`;

exports[`paths with spaces 1`] = `
<a
  aria-current="true"
  className="active"
  href="/second"
  onClick={[Function]}
  onMouseDown={undefined}
  onTouchStart={undefined}
  style={Object {}}
  target={undefined}
/>
`;

exports[`query params are ommitted 1`] = `
<a
  aria-current="true"
  className="active"
  href="/first?foo=123"
  onClick={[Function]}
  onMouseDown={undefined}
  onTouchStart={undefined}
  style={Object {}}
  target={undefined}
/>
`;

exports[`reacts to state changes (onClick) 1`] = `
<a
  aria-current={false}
  className=""
  href="/second/bar"
  onClick={[Function]}
  onMouseDown={undefined}
  onTouchStart={undefined}
  style={undefined}
  target={undefined}
/>
`;

exports[`reacts to state changes (onClick) 2`] = `
<a
  aria-current="true"
  className="active"
  href="/second/bar"
  onClick={[Function]}
  onMouseDown={undefined}
  onTouchStart={undefined}
  style={Object {}}
  target={undefined}
/>
`;

exports[`show activeStyle 1`] = `
<a
  aria-current="true"
  className="active"
  href="/first"
  onClick={[Function]}
  onMouseDown={undefined}
  onTouchStart={undefined}
  style={
    Object {
      "color": "red",
    }
  }
  target={undefined}
/>
`;

exports[`supports custom HTML tag name 1`] = `
<div
  aria-current={false}
  className=""
  href={undefined}
  onClick={[Function]}
  onMouseDown={undefined}
  onTouchStart={undefined}
  style={undefined}
  target={undefined}
/>
`;

exports[`supports custom HTML tag name in active mode 1`] = `
<div
  aria-current="true"
  className="active-foo"
  href={undefined}
  onClick={[Function]}
  onMouseDown={undefined}
  onTouchStart={undefined}
  style={Object {}}
  target={undefined}
/>
`;

exports[`supports custom HTML tag name which is still a link 1`] = `
<a
  aria-current={false}
  className=""
  href="/somewhere"
  onClick={[Function]}
  onMouseDown={undefined}
  onTouchStart={undefined}
  style={undefined}
  target={undefined}
/>
`;
